objects/ssot__GeneratedOperationPlanStepExecution__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeneratedOpPlanStepExecutionStatus__c</fullName>
        <label>Generated Op Plan Step Execution Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeneratedOperationPlanExecutionId__c</fullName>
        <label>Generated Operation Plan Execution</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeneratedOperationPlanStepId__c</fullName>
        <label>Generated Operation Plan Step</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Generated Op Plan Step Execution Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128376139_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GeneratedOperationPlanStepExecution__rel</label>
        <referenceTo>ssot__GeneratedOperationPlanExecution__dlm</referenceTo>
        <relationshipLabel>GeneratedOperationPlanStepExecution__rel</relationshipLabel>
        <relationshipName>rel_1723128376139_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128377274_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GeneratedOperationPlanStepExecution__rel</label>
        <referenceTo>ssot__GeneratedOperationPlanStep__dlm</referenceTo>
        <relationshipLabel>GeneratedOperationPlanStepExecution__rel</relationshipLabel>
        <relationshipName>rel_1723128377274_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>